--- a/wp-content/themes/newington/style.css
+++ b/wp-content/themes/newington/style.css
@@ -34,6 +34,12 @@ header#branding #network_dwp {
 	background-repeat: no-repeat !important;
 	background-position: right top;
 }
+header a.logo_zone {
+	height: 60px;
+	width: 200px;
+	display: block;
+	outline: none;
+}
 #branding hgroup {
 	margin: 0;
 }
