--- a/wp-content/themes/newington/style.css
+++ b/wp-content/themes/newington/style.css
@@ -78,4 +78,12 @@ h2#site-description {
 }
 .entry-title {
 	padding-bottom: 0;
+	padding-top: 0;
+}
+
+#respond .form-submit {
+ 	margin: 20px 5px 10px
+}
+.entry-content, .entry-summary {
+	padding-top: 0.5em;
 }
